# lyricweb

./: .gitignore  AUTHORS  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml  web.yml
lyrictool/: CHANGELOG.md  Cargo.toml  README.md
lyrictool/src/: main.rs
lyricutils/: Cargo.toml  README.md
lyricutils/src/: abc.rs  lib.rs  music_xml.rs
lyricweb/: Cargo.toml  example.json  index.html  style.css
lyricweb/js/: index.js
lyricweb/src/: editsong.rs  files.rs  import_export.rs  lib.rs  main.rs  model.rs  playlist.rs  screens.rs  slide.rs  songlist.rs  wakelock.rs
lyricweb/src/model/: helpers.rs  slide.rs
lyricweb/static/: index.html  lyricweb.webmanifest  style.css
openlyrics/: CHANGELOG.md  Cargo.toml  README.md
openlyrics/examples/: print_lyrics.rs
openlyrics/src/: lib.rs  types.rs
src/: lib.rs  main.rs
