[package]
name = "lyrictool"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Command-line tool for working with OpenLyrics XML files."

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
openlyrics = { version = "0.1.0", path = "../openlyrics" }
quick-xml = { version = "0.38.1", features = ["serialize"] }
