[package]
name = "lyricutils"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utilities for converting between different formats of song lyrics."
repository = "https://github.com/qwandor/lyricweb"
keywords = ["lyrics", "openlyrics", "xml", "abc", "musicxml"]
categories = ["encoding"]

[dependencies]
abc-parser = "0.4.0"
log = "0.4.29"
musicxml = "1.1.2"
openlyrics = { version = "0.1.1", path = "../openlyrics" }
quick-xml = { version = "0.39.1", features = ["serialize"] }
regex = "1.12.3"
