[package]
name = "lyricweb"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Web app for displaying song lyrics."
repository = "https://github.com/qwandor/lyricweb"
keywords = ["lyrics", "openlyrics", "webapp"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
openlyrics = { version = "0.1.0", path = "../openlyrics" }
quick-xml = { version = "0.38.3", features = ["serialize"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Node",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[features]
default = ["console_error_panic_hook"]
