[package]
name = "lyricweb"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Web app for displaying song lyrics."
repository = "https://github.com/qwandor/lyricweb"
keywords = ["lyrics", "openlyrics", "webapp"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-utils = "0.2.0"
leptos = { version = "0.8.14", features = ["csr"] }
leptos_router = "0.8.10"
leptos-use = "0.16.3"
openlyrics = { version = "0.1.1", path = "../openlyrics" }
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Node",
    "OpenFilePickerOptions",
    "Presentation",
    "PresentationRequest",
    "SaveFilePickerOptions",
    "StyleSheet",
    "StyleSheetList",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[features]
default = ["console_error_panic_hook"]
