[package]
name = "lyricweb"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Web app for displaying song lyrics."
repository = "https://github.com/qwandor/lyricweb"
keywords = ["lyrics", "openlyrics", "webapp"]

[dependencies]
abc-parser = "0.4.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-console = "0.3.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-utils = "0.2.0"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = "0.8.10"
leptos_meta = "0.8.5"
leptos-use = "0.18.0"
lyricutils = { version = "0.1.0", path = "../lyricutils" }
musicxml = "1.1.2"
openlyrics = { version = "0.1.1", path = "../openlyrics" }
pulldown-cmark = "0.13.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Navigator",
    "Node",
    "OpenFilePickerOptions",
    "Presentation",
    "PresentationAvailability",
    "PresentationConnection",
    "PresentationConnectionAvailableEvent",
    "PresentationConnectionCloseEvent",
    "PresentationConnectionList",
    "PresentationConnectionState",
    "PresentationReceiver",
    "PresentationRequest",
    "SaveFilePickerOptions",
    "StyleSheet",
    "StyleSheetList",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[features]
default = ["console_error_panic_hook"]
