[package]
name = "openlyrics"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library for parsing OpenLyrics XML files."

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
quick-xml = { version = "0.38.1", features = ["serialize"] }
